# learn_rust

./: .gitignore  Cargo.toml  README.md
session1/authentication/: Cargo.toml
session1/authentication/src/: lib.rs
session1/login/: Cargo.toml  users.json
session1/login/src/: main.rs
session1/login_manager/src/: main.rs
session1/variables/src/: main.rs
session2/channels1/src/: main.rs
session2/divide_work/src/: main.rs
session2/smart_pointer/src/: main.rs
session2/thread/src/: main.rs
session2/thread_builder/src/: main.rs
src/: bundle.rs  main.rs
