workspace = { members = ["session1/hello_world", "session1/variables"] }
[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18"
solana-sdk = "^1.18"
tracing = { version = "0.1.40", features = ["log"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "*"

